Sudoku field random generator

--- a/sudoku/main.sass
+++ b/sudoku/main.sass
@@ -27,6 +27,7 @@ div.sudoku
     font-size:  20px
     background: white
     width: 14.25em
+    border-radius: .25em
 
     div.block
       display: inline-block
