Sudoku, making the vield validations and checking for the game over

--- a/sudoku/main.sass
+++ b/sudoku/main.sass
@@ -60,6 +60,9 @@ div.sudoku
         &.preset
           color: brown
 
+        &.duplicate
+          background: red
+
     div.popup
       position: absolute
       left: -1em
@@ -104,3 +107,12 @@ div.sudoku
     position: absolute
     top: 7em
     left: 21em
+    width: 15em
+
+    ol.hiscore
+      opacity: 1
+      margin-top: 0.5em
+      padding-left: 1.6em
+
+      input
+        width: 9em
