Sudoku a bit of css adjustments

--- a/sudoku/main.sass
+++ b/sudoku/main.sass
@@ -52,10 +52,10 @@ div.sudoku
         position: relative
 
         &.hover
-          background: #FAA !important
+          background: #FBB !important
 
         &.cross
-          background: #FDD
+          background: #FEE
 
         &.preset
           color: brown
@@ -81,7 +81,7 @@ div.sudoku
           color: inherit
 
           &:hover
-            background: #FAA
+            background: #FBB
 
   div.status
     position: absolute
