Demo pages fixes and updates

--- a/hiscore/main.sass
+++ b/hiscore/main.sass
@@ -36,7 +36,7 @@ ol.hiscore
       color: red
 
     &:nth-child(2n)
-      background: #EEE
+      background: rgba(0,0,0,0.06)
 
   &.empty
     opacity: 0.6
