--- a/cards/main.sass
+++ b/cards/main.sass
@@ -44,9 +44,32 @@ div.card
   text-align: center
   vertical-align: top
 
+  &.card-open
+    .back
+      display: none
+    .face
+      display: block
+
+  .back
+    display: block
+    width:   100%
+    height:  100%
+
+    .decoration
+      position: absolute
+      top: 1em
+      left: 1em
+      width: 7em
+      height: 10em
+      border: 1px solid rgba(0,0,0,0.3)
+      border-radius: .3em
+      background: rgb(157,57,46) url(/images/back-mask.png)
+
+
   .face
-    width:  100%
-    height: 100%
+    display: none
+    width:   100%
+    height:  100%
 
     .name
       position: absolute
