--- a/cards/main.sass
+++ b/cards/main.sass
@@ -54,7 +54,7 @@ div.card
     display: block
     width:   100%
     height:  100%
-    background: rgba(255, 255, 128, 0.1)
+    background: rgba(255, 255, 128, 0.25)
 
     .decoration
       position: absolute
@@ -71,6 +71,7 @@ div.card
     display: none
     width:   100%
     height:  100%
+    background: rgba(255, 255, 128, 0.1)
 
     .name
       position: absolute
@@ -82,7 +83,9 @@ div.card
         top:    auto
         right:  .5em
         bottom: .5em
-        transform: rotate(180)
+        transform: rotate(180deg)
+        -moz-transform: rotate(180deg)
+        -webkit-transform: rotate(180deg)
 
     .decoration
       width:      50px
@@ -159,6 +162,9 @@ div.card
   &.card-10 .dot-4, &.card-10 .dot-8
     top: auto
     bottom: 1em
+    transform: rotate(180deg)
+    -moz-transform: rotate(180deg)
+    -webkit-transform: rotate(180deg)
 
   &.card-4  .dot-1, &.card-4  .dot-2,
   &.card-5  .dot-1, &.card-5  .dot-2,
@@ -194,6 +200,9 @@ div.card
   &.card-8 .dot-8
     top: auto
     bottom: 2.2em
+    transform: rotate(180deg)
+    -moz-transform: rotate(180deg)
+    -webkit-transform: rotate(180deg)
 
   &.card-9  .dot-2, &.card-9  .dot-6,
   &.card-10 .dot-2, &.card-10 .dot-6
@@ -203,13 +212,19 @@ div.card
   &.card-10 .dot-3, &.card-10 .dot-7
     top: auto
     bottom: 2.5em
+    transform: rotate(180deg)
+    -moz-transform: rotate(180deg)
+    -webkit-transform: rotate(180deg)
 
-  &.card-10 .dot-9, &.card-10 .dot-9
+  &.card-10 .dot-9
     top: 1.8em
 
-  &.card-10 .dot-10, &.card-10 .dot-10
+  &.card-10 .dot-10
     top: auto
     bottom: 1.8em
+    transform: rotate(180deg)
+    -moz-transform: rotate(180deg)
+    -webkit-transform: rotate(180deg)
 
 
   // J,Q,K,A cards faces
