Renaming the background image mask

--- a/cards/main.sass
+++ b/cards/main.sass
@@ -64,7 +64,7 @@ div.card
       height: 10em
       border: 1px solid rgba(157,57,46,0.2)
       border-radius: .4em
-      background: rgb(157,57,46) url(/images/back-mask.png) repeat center center
+      background: rgb(157,57,46) url(/images/background-mask.png) repeat center center
 
 
   .face
