Psychic-test FF css fix

--- a/psychic-test/main.sass
+++ b/psychic-test/main.sass
@@ -23,8 +23,9 @@ div.psychic-test
       width:      5em
 
     input[type=button]
-      font-size: 3em
-      width:     1.5em
+      font-size:   1.5em
+      font-weight: bold
+      width:       4em
 
     input.red
       color: red
