Mines: making everything work

--- a/mines/main.sass
+++ b/mines/main.sass
@@ -62,6 +62,7 @@ div.mines-game
       width:          24px
       height:         24px
       line-height:    24px
+      text-align:     center
       display:        inline-block
       background:     url(/images/cells-24.png) no-repeat -24px 0
       vertical-align: top
